--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 ---
 dist: xenial
 install:
-  - "pip install pytest pylint pycodestyle pydocstyle requests time"
+  - "pip install pytest pylint pycodestyle pydocstyle requests"
 language: python
 python:
   - "3.7"
